--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
-            <version>2.2-M1-groovy-4.0</version>
+            <version>1.0-groovy-2.4</version>
             <scope>test</scope>
         </dependency>
 
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>3.0.10</version>
+            <version>2.4.10</version>
             <type>pom</type>
         </dependency>
 
