--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 #localhost
-#spring.datasource.url=jdbc:mysql://localhost:3306/user_management_system?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/user_management_system?allowPublicKeyRetrieval=true&useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=4It42NadpHwUUd$
 
 #docker mysql
-spring.datasource.url=jdbc:mysql://user-management-system-mysql:3306/user_management_system?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://user-management-system-mysql:3306/user_management_system?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+#test container
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
