--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,12 @@
 spring:
   datasource:
-    url: 'jdbc:mysql://localhost:3306/user_management_system?allowPublicKeyRetrieval'
+    url: 'jdbc:mysql://localhost:3306/user_management_system?allowPublicKeyRetrieval=true&useSSL=false'
     username: root
     password: 4It42NadpHwUUd$
     driver-class-name: com.mysql.cj.jdbc.Driver
   #datasource:
     #url: >-
-    #  jdbc:mysql://user-management-system-mysql:3306/user_management_system?allowPublicKeyRetrieval
+    #  jdbc:mysql://user-management-system-mysql:3306/user_management_system?allowPublicKeyRetrieval=true&useSSL=false
     #username: root
     #password: root
 
