--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,14 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>1.7.11</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
