--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,12 @@
             <version>3.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
